# huggingface-models

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: finetune.yaml  lora.yaml  transfer.yaml
hf_models/: __init__.py  data.py
hf_models/data/: __init__.py  base.py  cifar.py  datamodules.py  transform.py
hf_models/model/: __init__.py  base.py  classif.py
hf_utils/: __init__.py  data.py
hf_utils/data/: __init__.py  utils.py
hf_utils/data/datamodules/: __init__.py  base.py  cifar.py  transform.py
hf_utils/layers/: __init__.py  dense.py  utils.py
hf_utils/lightning_face/: __init__.py
hf_utils/lightning_face/data/: base.py
hf_utils/lightning_face/model/: __init__.py  base.py  classif.py
hf_utils/model/: __init__.py  peft.py
hf_utils/model/lightning/: __init__.py  base.py  classif.py  lora.py  lr_schedule.py
hf_utils/model/torch/: __init__.py  base.py  bert_like.py  gpt_like.py
hf_utils/torch_face/: __init__.py  autoreg.py  base.py  bert_like.py  bidirect.py  classif.py  dense.py  gpt_like.py  utils.py
lightning_face/data/: __init__.py  base.py  cifar.py  transform.py
lightning_face/model/: base.py  classif.py
notebooks/: diffusers.ipynb  finetuning.ipynb  lr_schedules.ipynb  timm.ipynb  transformers.ipynb  transformers_chat.ipynb  transformers_class.ipynb  transformers_classif.ipynb  transformers_cv_classif.ipynb  transformers_cv_detect.ipynb  transformers_cv_finetune.ipynb  transformers_cv_lora.ipynb  transformers_cv_lora2.ipynb  transformers_cv_segment.ipynb  transformers_cv_transfer.ipynb  transformers_det.ipynb  transformers_detect.ipynb  transformers_lm_autoreg.ipynb  transformers_lm_bert.ipynb  transformers_lm_bert_finetune.ipynb  transformers_lm_bidirect.ipynb  transformers_lm_finetune.ipynb  transformers_lm_gpt.ipynb  transformers_lm_gpt_finetune.ipynb  transformers_seg.ipynb  transformers_segment.ipynb  transformers_transfer.ipynb  transformers_vlm.ipynb  transformers_vlm_clip.ipynb  transformers_vlm_clipseg.ipynb  transformers_vlm_owlvit.ipynb
scripts/: main.py  train_transfer_learning.py
utils/: __init__.py  data.py
