[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hf_utils"]

[project]
name = "hf-utils"
version = "0.0.1"
description = "Hugging Face models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["Hugging Face", "transfer learning", "fine-tuning"]
dependencies = [
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "lightning",
    "tensorboard",
    "mlflow",
    "timm",
    "diffusers",
    "transformers",
    "datasets",
    "accelerate",
    "evaluate",
    "peft",
    "matplotlib",
    "notebook"
]

[project.urls]
source = "https://github.com/joseph-nagel/huggingface-models"
